--- a/packages/SettingsProvider/res/values/defaults.xml
+++ b/packages/SettingsProvider/res/values/defaults.xml
@@ -240,4 +240,9 @@
     <bool name="def_aware_lock_enabled">false</bool>
 
     <integer name="def_ota_disable_automatic_update">1</integer>
+
+    <!-- microG UnifiedNlp default backends
+        format: packagename/componentname/signature|pkg/cmp/sig|.. -->
+    <string name="def_microg_location_backends"></string>
+    <string name="def_microg_geocoder_backends"></string>
 </resources>
