SystemUI: Implement Bluetooth dialog
Based on Internet dialog code.

Change-Id: Iff63a49ff6a49c535b63a430bee8d7c55e78cbcc

--- a/packages/SystemUI/res/values/404_strings.xml
+++ b/packages/SystemUI/res/values/404_strings.xml
@@ -56,4 +56,8 @@
     <string name="quick_settings_quick_pull_down_name">Quick Settings quick pull-down</string>
     <string name="quick_settings_quick_pull_down_summary">Automatically expand Quick Settings when pulling from the side of the screen</string>
 
+    <!-- Bluetooth dialog -->
+    <string name="turn_on_bluetooth">Use Bluetooth</string>
+    <string name="bluetooth_is_off">Bluetooth is off</string>
+    <string name="tap_a_device_to_connect">Tap a device to connect</string>
 </resources>
